feat: 基本实现登录验证微服务

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "AuthMicroservices for iot-backend"
 dependencies = [
     "flask",
     "flask-sqlalchemy",
-    "pymysql"
+    "pymysql",
+    "sqlalchemy"
 ]
 
 [build-system]
