style: 调整依赖顺序和版本号

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,10 @@ version = "0.0.1"
 description = "AuthMicroservices for iot-backend"
 dependencies = [
     "flask",
+    "flask-cors",
     "flask-sqlalchemy",
+    "sqlalchemy",
     "pymysql",
-    "sqlalchemy"
 ]
 
 [build-system]
