--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask
-sqlalchemy
-flask-sqlalchemy
-pymysql
-pytest
+flask==3.0.3
+flask-cors==4.0.0
+flask-sqlalchemy==3.1.1
+sqlalchemy==2.0.29
+pymysql==1.1.0
+gunicorn==22.0.0
