refactor<认证模块>: 简化文件结构

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "AuthMicroservices"
+name = "iotauth"
 version = "0.0.1"
-description = "AuthMicroservices for iot-backend"
+description = "auth module for iot-backend"
 dependencies = [
     "flask",
     "flask-cors",
